<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView

            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/small_banner" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/l_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            app:startIconDrawable="@drawable/ic_money">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/l_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="phone number"
            android:hint="@string/phone_number"
            app:startIconDrawable="@drawable/ic_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="number"
                android:maxLength="12" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/l_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reason_for_payment"
            app:startIconDrawable="@drawable/ic_payments">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/l_client_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/client_id"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/l_secret"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/client_secret"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_secret">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPerRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:layout_marginStart="16dp"
            android:text="@string/pay"/>

    </LinearLayout>

</ScrollView>